force-app/main/default/objects/FieloEE__Point__c/FieloEE__Point__c.object-meta.xml
<CustomObject>
    <description>Points of each member. Points can increase after a transaction or decrease after a redemption.</description>
    <label>Point</label>
    <nameField>
        <displayFormat>P-{0000000}</displayFormat>
        <label>Nombre de Point</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Point</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>