force-app/main/default/objects/FieloEE__Point__c/fields/FieloEE__ActionDescription__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__ActionDescription__c</fullName>
    <description>Detail of the action activated by the transaction.</description>
    <label>Action Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>