force-app/main/default/objects/FieloEE__Point__c/fields/FieloEE__Balance__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Balance__c</fullName>
    <formula>IF ( FieloEE__Points__c &gt; 0 , FieloEE__Points__c - FieloEE__PointsUsed__c - 	FieloEE__PointsExpired__c, 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>