force-app/main/default/objects/FieloEE__Point__c/fields/FieloEE__Member__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Member__c</fullName>
    <description>Member who made the transaction.</description>
    <label>Member</label>
    <referenceTo>FieloEE__Member__c</referenceTo>
    <relationshipLabel>Points</relationshipLabel>
    <relationshipName>Points</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>