force-app/main/default/objects/FieloEE__Point__c/fields/FieloEE__MemberBalance__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__MemberBalance__c</fullName>
    <label>Member Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>