force-app/main/default/objects/FieloEE__Point__c/fields/FieloEE__Points__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Points__c</fullName>
    <description>Quantity of points earned with the transaction.</description>
    <label>Points</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>