force-app/main/default/objects/FieloEE__Point__c/fields/FieloEE__PointsExpired__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__PointsExpired__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Expired</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>