force-app/main/default/objects/FieloEE__Point__c/fields/FieloEE__Promotion__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Promotion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The promotion to which this point belongs.</description>
    <inlineHelpText>Here you can see the promotion that created the point.</inlineHelpText>
    <label>Promotion</label>
    <referenceTo>FieloEE__Promotion__c</referenceTo>
    <relationshipLabel>Points</relationshipLabel>
    <relationshipName>Points</relationshipName>
    <type>Lookup</type>
</CustomField>