force-app/main/default/objects/FieloEE__Point__c/fields/FieloEE__Rule__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The rule to which this point belongs.</description>
    <inlineHelpText>Here you can see the rule that created the point.</inlineHelpText>
    <label>Rule</label>
    <referenceTo>FieloEE__Rule__c</referenceTo>
    <relationshipLabel>Points</relationshipLabel>
    <relationshipName>Points</relationshipName>
    <type>Lookup</type>
</CustomField>