force-app/main/default/objects/FieloEE__Point__c/fields/FieloEE__RuleDescription__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__RuleDescription__c</fullName>
    <description>Description of the rule activated by the transaction.</description>
    <label>Rule Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>