force-app/main/default/objects/FieloEE__Point__c/fields/FieloEE__Transaction__c.field-meta.xml
<CustomField>
    <fullName>FieloEE__Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transaction</label>
    <referenceTo>FieloEE__Transaction__c</referenceTo>
    <relationshipLabel>Points</relationshipLabel>
    <relationshipName>Points</relationshipName>
    <type>Lookup</type>
</CustomField>